--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.1.0",
     "@ngrx/component": "^16.3.0",
     "@ngrx/effects": "^16.3.0",
+    "@ngrx/router-store": "^16.3.0",
     "@ngrx/store": "^16.3.0",
     "@ngrx/store-devtools": "^16.3.0",
     "rxjs": "~7.8.0",
